# daemon-template

./: Cargo.toml
src/: main.rs
src/daemon/: main.rs
